added some links and fixed button hover

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
  		<link rel="stylesheet" type="text/css" href="styles.css">
  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
  		<script src="script.js"></script>
@@ -10,11 +11,15 @@
 
 	</head>
 	<body>
+		<div class="navbar">
+				<a href="">HOME</a>
+				<a href="">THINGS</a>
+		</div>
 		<div class="underlay">
 			<div class="project-display" id="one">
 				
 				<div class="project">
-					<div class="button">Project 1</div>
+					<div class="button"><a href="">Project 1</a></div>
 					<img src="http://www.drodd.com/images10/space-wallpaper12.jpg">
 					
 				</div>
@@ -22,13 +27,18 @@
 
 			<div class="project-display" id="two">
 
-				<div class="project"><img src="https://urbanfragment.files.wordpress.com/2012/08/space-beach.jpg">
+				<div class="project">
+				<div class="button"><a href="">Project 2</a></div>
+					<img src="https://urbanfragment.files.wordpress.com/2012/08/space-beach.jpg">
 
 				</div>
 			</div>
 
 			<div class="project-display" id="three">
-				<div class="project"><img src="http://kingofwallpapers.com/space/space-020.jpg">
+
+				<div class="project">
+					<div class="button"><a href="">Project 3</a></div>
+					<img src="http://kingofwallpapers.com/space/space-020.jpg">
 
 				</div>
 			</div>
